--- a/packages/datetime/package.json
+++ b/packages/datetime/package.json
@@ -39,7 +39,8 @@
         "classnames": "^2.2",
         "react-day-picker": "7.4.8",
         "react-lifecycles-compat": "^3.0.4",
-        "tslib": "~1.13.0"
+        "tslib": "~1.13.0",
+        "react-popper": "^1.3.7"
     },
     "peerDependencies": {
         "react": "^15.3.0 || 16 || 17",
