--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -46,7 +46,7 @@
         "verify": "npm-run-all compile -p dist test lint"
     },
     "dependencies": {
-        "@blueprintjs/icons": "^3.24.0",
+        "@blueprintjs/icons": "3.24.0",
         "@types/dom4": "^2.0.1",
         "classnames": "^2.2",
         "dom4": "^2.1.5",
