--- a/packages/datetime/package.json
+++ b/packages/datetime/package.json
@@ -35,7 +35,7 @@
         "verify": "npm-run-all compile -p dist test lint"
     },
     "dependencies": {
-        "@blueprintjs/core": "^3.38.1",
+        "@blueprintjs/core": "3.38.1",
         "classnames": "^2.2",
         "react-day-picker": "7.4.8",
         "react-lifecycles-compat": "^3.0.4",
