--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -35,7 +35,7 @@
         "verify": "npm-run-all compile -p dist test lint"
     },
     "dependencies": {
-        "@blueprintjs/core": "^3.38.1",
+        "@blueprintjs/core": "3.38.1",
         "classnames": "^2.2",
         "tslib": "~1.13.0"
     },
